--- a/week16.html
+++ b/week16.html
@@ -37,11 +37,11 @@
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Roger (2)</b></font></td></tr>
 <tr><td>JAllen</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Pollard</td>       <td></td><td align=right>0</td></tr>
 <tr><td>JCook</td>         <td></td><td align=right>0</td></tr>
+<tr><td>Mattison</td>      <td></td><td align=right>0</td></tr>
 <tr><td>Lamb</td>          <td></td><td align=right>0</td></tr>
-<tr><td>GWilson</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Freiermuth</td>    <td></td><td align=right>0</td></tr>
+<tr><td>Higgins</td>       <td></td><td align=right>0</td></tr>
+<tr><td>Kincaid</td>       <td></td><td align=right>0</td></tr>
 <tr><td>McLaughlin</td>    <td></td><td align=right>0</td></tr>
 <tr><td>RDavis</td>        <td></td><td align=right>0</td></tr>
 <tr><td></td>              <td></td><td align=right>0</td></tr>
@@ -52,7 +52,7 @@
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Matthew (4)</b></font></td></tr>
 <tr><td>Purdy</td>         <td></td><td align=right>0</td></tr>
 <tr><td>Gibbs</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Montgomery</td>    <td></td><td align=right>0</td></tr>
+<tr><td>Kamara</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Sutton</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Kupp</td>          <td></td><td align=right>0</td></tr>
 <tr><td>Kraft</td>         <td></td><td align=right>0</td></tr>
@@ -113,10 +113,10 @@
 <tr><td>Barkley</td>       <td></td><td align=right>0</td></tr>
 <tr><td>JTaylor</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Evans</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Mooney</td>        <td></td><td align=right>0</td></tr>
+<tr><td>Hopkins</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Andrews</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Fairbairn</td>     <td></td><td align=right>0</td></tr>
-<tr><td>Worthy</td>        <td></td><td align=right>0</td></tr>
+<tr><td>Sanders</td>       <td></td><td align=right>0</td></tr>
+<tr><td>Penix</td>         <td></td><td align=right>0</td></tr>
 <tr><td></td>              <td></td><td align=right>0</td></tr>
 </table>
 </td>
