--- a/freeagt.html
+++ b/freeagt.html
@@ -1,63 +1,63 @@
 <table border=0 cellspacing=0 cellpadding=2 width=100><tr>
 <td bgcolor=#802080 valign=center height=3 nowrap rowspan=2 width=705>
-<b><font size=6 color='white'><center>2024 Free Agent Leaderboard<br>(Through week 15)</font></b>&nbsp;&nbsp;</td></tr>
+<b><font size=6 color='white'><center>2024 Free Agent Leaderboard<br>(Through week 16)</font></b>&nbsp;&nbsp;</td></tr>
 </table>
 <table cellspacing=1><tr><td valign=top>
 <table width=260 border=2 cellspacing=0 cellpadding=1>
 <tr bgcolor=#000A78><td colspan=3><font size=5 color='yellow'><center>Quarterbacks</td></tr>
-<tr><td><font size=3>1)</td><td><font size=3>Aaron Rodgers          </td><td><font size=3>1560</td></tr>
-<tr><td><font size=3>2)</td><td><font size=3>Derek Carr             </td><td><font size=3>1275</td></tr>
-<tr><td><font size=3>3)</td><td><font size=3>Jameis Winston         </td><td><font size=3>1195</td></tr>
-<tr><td><font size=3>4)</td><td><font size=3>Russell Wilson         </td><td><font size=3>1020</td></tr>
-<tr><td><font size=3>5)</td><td><font size=3>Will Levis             </td><td><font size=3> 975</td></tr>
-<tr><td><font size=3>6)</td><td><font size=3>Dak Prescott           </td><td><font size=3> 960</td></tr>
-<tr><td><font size=3>7)</td><td><font size=3>Trevor Lawrence        </td><td><font size=3> 940</td></tr>
-<tr><td><font size=3>8)</td><td><font size=3>Bryce Young            </td><td><font size=3> 765</td></tr>
-<tr><td><font size=3>9)</td><td><font size=3>Taysom Hill            </td><td><font size=3> 740</td></tr>
+<tr><td><font size=3>1)</td><td><font size=3>Aaron Rodgers          </td><td><font size=3>1645</td></tr>
+<tr><td><font size=3>2)</td><td><font size=3>Kirk Cousins           </td><td><font size=3>1590</td></tr>
+<tr><td><font size=3>3)</td><td><font size=3>Derek Carr             </td><td><font size=3>1275</td></tr>
+<tr><td><font size=3>4)</td><td><font size=3>Jameis Winston         </td><td><font size=3>1195</td></tr>
+<tr><td><font size=3>5)</td><td><font size=3>Russell Wilson         </td><td><font size=3>1120</td></tr>
+<tr><td><font size=3>6)</td><td><font size=3>Bryce Young            </td><td><font size=3>1045</td></tr>
+<tr><td><font size=3>7)</td><td><font size=3>Will Levis             </td><td><font size=3> 975</td></tr>
+<tr><td><font size=3>8)</td><td><font size=3>Dak Prescott           </td><td><font size=3> 960</td></tr>
+<tr><td><font size=3>9)</td><td><font size=3>Trevor Lawrence        </td><td><font size=3> 940</td></tr>
 <tr><td><font size=3>10)</td><td><font size=3>Justin Fields          </td><td><font size=3> 735</td></tr>
 <tr><td><font size=3>11)</td><td><font size=3>Gardner Minshew        </td><td><font size=3> 725</td></tr>
 <tr><td><font size=3>12)</td><td><font size=3>Daniel Jones           </td><td><font size=3> 675</td></tr>
-<tr><td><font size=3>13)</td><td><font size=3>Andy Dalton            </td><td><font size=3> 485</td></tr>
-<tr><td><font size=3>14)</td><td><font size=3>Mason Rudolph          </td><td><font size=3> 475</td></tr>
-<tr><td><font size=3>15)</td><td><font size=3>Aidan O'Connell        </td><td><font size=3> 415</td></tr>
+<tr><td><font size=3>13)</td><td><font size=3>Mason Rudolph          </td><td><font size=3> 665</td></tr>
+<tr><td><font size=3>14)</td><td><font size=3>Mac Jones              </td><td><font size=3> 495</td></tr>
+<tr><td><font size=3>15)</td><td><font size=3>Andy Dalton            </td><td><font size=3> 485</td></tr>
 </table>
 </td><td valign=top>
 <table width=220 border=2 cellspacing=0 cellpadding=1>
 <tr bgcolor=#000A78><td colspan=2><font size=5 color='yellow'><center>Running Backs</td></tr>
 <tr><td><font size=3>Jordan Mason           </td><td><font size=3> 550</td></tr>
 <tr><td><font size=3>Austin Ekeler          </td><td><font size=3> 420</td></tr>
+<tr><td><font size=3>Jeremy McNichols       </td><td><font size=3> 390</td></tr>
 <tr><td><font size=3>Ty Johnson             </td><td><font size=3> 380</td></tr>
-<tr><td><font size=3>Jeremy McNichols       </td><td><font size=3> 380</td></tr>
-<tr><td><font size=3>Jerome Ford            </td><td><font size=3> 345</td></tr>
+<tr><td><font size=3>Ameer Abdullah         </td><td><font size=3> 375</td></tr>
 <tr><td><font size=3>Roschon Johnson        </td><td><font size=3> 300</td></tr>
 <tr><td><font size=3>Sean Tucker            </td><td><font size=3> 285</td></tr>
-<tr><td><font size=3>Ameer Abdullah         </td><td><font size=3> 275</td></tr>
+<tr><td><font size=3>DeeJay Dallas          </td><td><font size=3> 250</td></tr>
 <tr><td><font size=3>Dameon Pierce          </td><td><font size=3> 235</td></tr>
 <tr><td><font size=3>Antonio Gibson         </td><td><font size=3> 230</td></tr>
 <tr><td><font size=3>Emari Demercado        </td><td><font size=3> 225</td></tr>
-<tr><td><font size=3>DeeJay Dallas          </td><td><font size=3> 200</td></tr>
 <tr><td><font size=3>Tyler Goodson          </td><td><font size=3> 200</td></tr>
 <tr><td><font size=3>Kene Nwangwu           </td><td><font size=3> 200</td></tr>
 <tr><td><font size=3>Chris Rodriguez        </td><td><font size=3> 170</td></tr>
+<tr><td><font size=3>Ezekiel Elliott        </td><td><font size=3> 150</td></tr>
 </table>
 </td><td valign=top>
 <table width=220 border=2 cellspacing=0 cellpadding=1>
 <tr bgcolor=#000A78><td colspan=2><font size=5 color='yellow'><center>Wide Receivers</td></tr>
-<tr><td><font size=3>Jordan Addison         </td><td><font size=3> 995</td></tr>
-<tr><td><font size=3>Rashod Bateman         </td><td><font size=3> 885</td></tr>
-<tr><td><font size=3>Calvin Austin          </td><td><font size=3> 760</td></tr>
+<tr><td><font size=3>Jordan Addison         </td><td><font size=3>1045</td></tr>
+<tr><td><font size=3>Rashod Bateman         </td><td><font size=3> 960</td></tr>
+<tr><td><font size=3>Calvin Austin          </td><td><font size=3> 790</td></tr>
+<tr><td><font size=3>Keenan Allen           </td><td><font size=3> 735</td></tr>
 <tr><td><font size=3>KaVontae Turpin        </td><td><font size=3> 715</td></tr>
 <tr><td><font size=3>Alec Pierce            </td><td><font size=3> 650</td></tr>
 <tr><td><font size=3>Allen Lazard           </td><td><font size=3> 570</td></tr>
 <tr><td><font size=3>Demarcus Robinson      </td><td><font size=3> 545</td></tr>
 <tr><td><font size=3>Marquez ValdesScantling</td><td><font size=3> 545</td></tr>
-<tr><td><font size=3>Keenan Allen           </td><td><font size=3> 540</td></tr>
 <tr><td><font size=3>Romeo Doubs            </td><td><font size=3> 510</td></tr>
 <tr><td><font size=3>Jakobi Meyers          </td><td><font size=3> 480</td></tr>
+<tr><td><font size=3>Jalen Tolbert          </td><td><font size=3> 480</td></tr>
 <tr><td><font size=3>Michael Wilson         </td><td><font size=3> 465</td></tr>
-<tr><td><font size=3>Jalen Nailor           </td><td><font size=3> 410</td></tr>
-<tr><td><font size=3>Kalif Raymond          </td><td><font size=3> 410</td></tr>
-<tr><td><font size=3>Jalen Tolbert          </td><td><font size=3> 405</td></tr>
+<tr><td><font size=3>Tank Dell              </td><td><font size=3> 445</td></tr>
+<tr><td><font size=3>Adam Thielen           </td><td><font size=3> 420</td></tr>
 </table>
 </td></tr><tr><td valign=top>
 <table width=260 border=2 cellspacing=0 cellpadding=1>
@@ -65,45 +65,45 @@
 <tr><td><font size=3>1)</td><td><font size=3>Noah Gray              </td><td><font size=3> 435</td></tr>
 <tr><td><font size=3>2)</td><td><font size=3>Mike Gesicki           </td><td><font size=3> 355</td></tr>
 <tr><td><font size=3>3)</td><td><font size=3>Zach Ertz              </td><td><font size=3> 330</td></tr>
-<tr><td><font size=3>4)</td><td><font size=3>Foster Moreau          </td><td><font size=3> 300</td></tr>
-<tr><td><font size=3>5)</td><td><font size=3>Dallas Goedert         </td><td><font size=3> 295</td></tr>
-<tr><td><font size=3>6)</td><td><font size=3>Chig Okonkwo           </td><td><font size=3> 285</td></tr>
-<tr><td><font size=3>7)</td><td><font size=3>Austin Hooper          </td><td><font size=3> 280</td></tr>
-<tr><td><font size=3>8)</td><td><font size=3>Juwan Johnson          </td><td><font size=3> 225</td></tr>
-<tr><td><font size=3>9)</td><td><font size=3>Josh Oliver            </td><td><font size=3> 225</td></tr>
-<tr><td><font size=3>10)</td><td><font size=3>Brenton Strange        </td><td><font size=3> 215</td></tr>
+<tr><td><font size=3>4)</td><td><font size=3>Chig Okonkwo           </td><td><font size=3> 330</td></tr>
+<tr><td><font size=3>5)</td><td><font size=3>Austin Hooper          </td><td><font size=3> 305</td></tr>
+<tr><td><font size=3>6)</td><td><font size=3>Foster Moreau          </td><td><font size=3> 300</td></tr>
+<tr><td><font size=3>7)</td><td><font size=3>Dallas Goedert         </td><td><font size=3> 295</td></tr>
+<tr><td><font size=3>8)</td><td><font size=3>Dalton Schultz         </td><td><font size=3> 260</td></tr>
+<tr><td><font size=3>9)</td><td><font size=3>Juwan Johnson          </td><td><font size=3> 225</td></tr>
+<tr><td><font size=3>10)</td><td><font size=3>Josh Oliver            </td><td><font size=3> 225</td></tr>
 <tr><td><font size=3>11)</td><td><font size=3>Nate Adkins            </td><td><font size=3> 200</td></tr>
-<tr><td><font size=3>12)</td><td><font size=3>Adam Trautman          </td><td><font size=3> 190</td></tr>
-<tr><td><font size=3>13)</td><td><font size=3>Dalton Schultz         </td><td><font size=3> 185</td></tr>
+<tr><td><font size=3>12)</td><td><font size=3>Tyler Conklin          </td><td><font size=3> 195</td></tr>
+<tr><td><font size=3>13)</td><td><font size=3>Adam Trautman          </td><td><font size=3> 190</td></tr>
 <tr><td><font size=3>14)</td><td><font size=3>Will Dissly            </td><td><font size=3> 180</td></tr>
-<tr><td><font size=3>15)</td><td><font size=3>Tyler Conklin          </td><td><font size=3> 170</td></tr>
+<tr><td><font size=3>15)</td><td><font size=3>Luke Schoonmaker       </td><td><font size=3> 150</td></tr>
 </table>
 </td><td valign=top>
 <table width=220 border=2 cellspacing=0 cellpadding=1>
 <tr bgcolor=#000A78><td colspan=2><font size=5 color='yellow'><center>Kickers</td></tr>
+<tr><td><font size=3>Daniel Carlson         </td><td><font size=3>1090</td></tr>
 <tr><td><font size=3>Blake Grupe            </td><td><font size=3>1035</td></tr>
-<tr><td><font size=3>Daniel Carlson         </td><td><font size=3>1010</td></tr>
 <tr><td><font size=3>Nick Folk              </td><td><font size=3>1005</td></tr>
-<tr><td><font size=3>Joey Slye              </td><td><font size=3> 945</td></tr>
-<tr><td><font size=3>Matt Gay               </td><td><font size=3> 920</td></tr>
-<tr><td><font size=3>Cairo Santos           </td><td><font size=3> 870</td></tr>
-<tr><td><font size=3>Chad Ryland            </td><td><font size=3> 835</td></tr>
-<tr><td><font size=3>Eddy Pineiro           </td><td><font size=3> 775</td></tr>
-<tr><td><font size=3>Harrison Butker        </td><td><font size=3> 695</td></tr>
-<tr><td><font size=3>Anders Carlson         </td><td><font size=3> 565</td></tr>
+<tr><td><font size=3>Chad Ryland            </td><td><font size=3> 985</td></tr>
+<tr><td><font size=3>Matt Gay               </td><td><font size=3> 975</td></tr>
+<tr><td><font size=3>Joey Slye              </td><td><font size=3> 960</td></tr>
+<tr><td><font size=3>Cairo Santos           </td><td><font size=3> 910</td></tr>
+<tr><td><font size=3>Eddy Pineiro           </td><td><font size=3> 810</td></tr>
+<tr><td><font size=3>Harrison Butker        </td><td><font size=3> 775</td></tr>
+<tr><td><font size=3>Evan McPherson         </td><td><font size=3> 740</td></tr>
+<tr><td><font size=3>Brandon McManus        </td><td><font size=3> 680</td></tr>
+<tr><td><font size=3>Anders Carlson         </td><td><font size=3> 585</td></tr>
 <tr><td><font size=3>Greg Joseph            </td><td><font size=3> 555</td></tr>
-<tr><td><font size=3>Brandon McManus        </td><td><font size=3> 555</td></tr>
 <tr><td><font size=3>John Parker Romo       </td><td><font size=3> 425</td></tr>
 <tr><td><font size=3>Matthew Wright         </td><td><font size=3> 410</td></tr>
-<tr><td><font size=3>Greg Zuerlein          </td><td><font size=3> 310</td></tr>
 </table>
 </td><td valign=top>
 <table width=220 border=2 cellspacing=0 cellpadding=1>
 <tr bgcolor=#000A78><td colspan=2><font size=5 color='yellow'><center>Rookies</td></tr>
-<tr><td><font size=3>Brayden Narveson       </td><td><font size=3> 475</td></tr>
+<tr><td><font size=3>Brayden Narveson       </td><td><font size=3> 485</td></tr>
 <tr><td><font size=3>Jalen Coker            </td><td><font size=3> 320</td></tr>
-<tr><td><font size=3>Devaughn Vele          </td><td><font size=3> 180</td></tr>
-<tr><td><font size=3>AJ Barner              </td><td><font size=3> 150</td></tr>
+<tr><td><font size=3>Devaughn Vele          </td><td><font size=3> 255</td></tr>
+<tr><td><font size=3>AJ Barner              </td><td><font size=3> 200</td></tr>
 <tr><td><font size=3>Troy Franklin          </td><td><font size=3> 150</td></tr>
 <tr><td><font size=3>Theo Johnson           </td><td><font size=3> 150</td></tr>
 <tr><td><font size=3>Malik Washington       </td><td><font size=3> 125</td></tr>
