--- a/week17.html
+++ b/week17.html
@@ -43,7 +43,7 @@
 <tr><td>Higgins</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Freiermuth</td>    <td></td><td align=right>0</td></tr>
 <tr><td>McLaughlin</td>    <td></td><td align=right>0</td></tr>
-<tr><td>Nabers</td>        <td></td><td align=right>0</td></tr>
+<tr><td>RDavis</td>        <td></td><td align=right>0</td></tr>
 <tr><td></td>              <td></td><td align=right>0</td></tr>
 </table>
 </td>
@@ -53,11 +53,11 @@
 <tr><td>Burrow</td>        <td></td><td align=right>0</td></tr>
 <tr><td>BRobinson</td>     <td></td><td align=right>0</td></tr>
 <tr><td>Achane</td>        <td></td><td align=right>0</td></tr>
-<tr><td>DSmith</td>        <td></td><td align=right>0</td></tr>
-<tr><td>McConkey</td>      <td></td><td align=right>0</td></tr>
+<tr><td>JWilliams</td>     <td></td><td align=right>0</td></tr>
+<tr><td>DSamuel</td>       <td></td><td align=right>0</td></tr>
 <tr><td>LaPorta</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Dicker</td>        <td></td><td align=right>0</td></tr>
-<tr><td>MHarrison</td>     <td></td><td align=right>0</td></tr>
+<tr><td>McConkey</td>      <td></td><td align=right>0</td></tr>
 <tr><td></td>              <td></td><td align=right>0</td></tr>
 </table>
 </td>
@@ -97,9 +97,9 @@
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Matthew (4)</b></font></td></tr>
 <tr><td>Purdy</td>         <td></td><td align=right>0</td></tr>
 <tr><td>Gibbs</td>         <td></td><td align=right>0</td></tr>
-<tr><td>KMiller</td>       <td></td><td align=right>0</td></tr>
+<tr><td>Estime</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Sutton</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Kupp</td>          <td></td><td align=right>0</td></tr>
+<tr><td>BThomas</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Kraft</td>         <td></td><td align=right>0</td></tr>
 <tr><td>Myers</td>         <td></td><td align=right>0</td></tr>
 <tr><td>Nix</td>           <td></td><td align=right>0</td></tr>
@@ -125,7 +125,7 @@
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Sam (7)</b></font></td></tr>
-<tr><td>Tagovailoa</td>    <td></td><td align=right>0</td></tr>
+<tr><td>Goff</td>          <td></td><td align=right>0</td></tr>
 <tr><td>Hall</td>          <td></td><td align=right>0</td></tr>
 <tr><td>Jacobs</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Chase</td>         <td></td><td align=right>0</td></tr>
